samples/_failures_safe/1761337576_4afb8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36546f4a.c: In function ‘main’:
./samples/SAFE/__tmp_36546f4a.c:145:13: error: expected declaration or statement at end of input
  145 |             printf("Result:\n");
      |             ^~~~~~
./samples/SAFE/__tmp_36546f4a.c:145:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_36546f4a.c:145:13: error: expected declaration or statement at end of input
